--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.38.0",
     "@types/node": "^20.8.4",
+    "axios": "^1.5.1",
     "discord.js": "latest",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
